--- a/app/src/main/res/layout/cards_layout.xml
+++ b/app/src/main/res/layout/cards_layout.xml
@@ -23,7 +23,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="0dp"
-        android:layout_height="86dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -35,7 +35,7 @@
         android:paddingRight="0dp"
         android:paddingStart="0dp"
         android:paddingTop="0dp"
-        app:cardBackgroundColor="@color/colorBackgroundFundo"
+        app:cardBackgroundColor="@color/colorFundoServico"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
         app:cardUseCompatPadding="true"
@@ -45,50 +45,43 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:id="@+id/layoutCardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="0dp"
             android:orientation="horizontal"
             android:padding="0dp">
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:layout_weight="1"
-                android:src="@drawable/common_plus_signin_btn_icon_light_focused"
-                android:tag="image_tag" />
-
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="2dp"
                 android:layout_weight="2"
+                android:gravity="center_vertical"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textViewName"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/textServicoName"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="2dp"
-                    android:padding="0dp"
+                    android:layout_margin="4dp"
                     android:text="Android Name"
+                    android:textAlignment="center"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/colorPrimaryDark" />
+                    android:textColor="@color/colorTextoPrimary" />
 
                 <TextView
-                    android:id="@+id/textViewVersion"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/textSlogan"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
 
+                    android:layout_margin="3dp"
+                    android:padding="2dp"
                     android:text="Android Version"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@color/colorFundoServico"
-                    android:textStyle="bold" />
+                    android:textAlignment="center"
+                    android:textColor="@color/colorTextoPrimary" />
 
             </LinearLayout>
         </LinearLayout>
