--- a/app/src/main/res/layout/activity_fechamneto.xml
+++ b/app/src/main/res/layout/activity_fechamneto.xml
@@ -6,20 +6,21 @@
     android:layout_height="match_parent"
     tools:context="com.xavierluz.servicoonline.fragments.PrestadosActivity">
 
+
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycleViewPrestados"
+        android:id="@+id/recycleViewFechamento"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="120dp"
+        android:layout_gravity="center"
         android:background="@color/colorBackgroundFundo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
-
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        app:cardUseCompatPadding="true"/>
 </android.support.constraint.ConstraintLayout>
