Cadastro de serviços e arquivos

--- a/app/src/main/res/layout/activity_fechamneto.xml
+++ b/app/src/main/res/layout/activity_fechamneto.xml
@@ -11,16 +11,16 @@
         android:id="@+id/recycleViewFechamento"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_gravity="center"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="120dp"
-        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
         android:background="@color/colorBackgroundFundo"
+        app:cardUseCompatPadding="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:cardUseCompatPadding="true"/>
+        app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
