--- a/app/src/main/res/layout/cards_servico_fechado_layout.xml
+++ b/app/src/main/res/layout/cards_servico_fechado_layout.xml
@@ -29,7 +29,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="8dp"
         android:paddingLeft="2dp"
-        app:cardBackgroundColor="@color/colorFundoServico"
+        app:cardBackgroundColor="@color/colorBackgroundFundo"
         app:cardCornerRadius="3dp"
         app:cardElevation="1dp"
         app:cardUseCompatPadding="true"
@@ -65,7 +65,8 @@
                     android:text="Mês de fechamento"
                     android:textAlignment="center"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/colorTextoPrimary" />
+                    android:textColor="@color/colorPrimary"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/textFechamentoServicoId"
@@ -80,7 +81,7 @@
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorFundoServico">
+                    android:background="@color/colorBackgroundFundo">
                     <TextView
                         android:id="@+id/fechamentoId"
                         android:visibility="invisible"
@@ -101,10 +102,10 @@
                         android:padding="2dp"
                         android:text="Descrição"
                         android:textAlignment="center"
-                        android:textColor="@color/colorTextoPrimary"
+                        android:textColor="@color/colorPrimary"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/textValor"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0" />
