--- a/app/src/main/res/layout/cards_servico_prestado_layout.xml
+++ b/app/src/main/res/layout/cards_servico_prestado_layout.xml
@@ -29,7 +29,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="8dp"
         android:paddingLeft="2dp"
-        app:cardBackgroundColor="@color/colorFundoServico"
+        app:cardBackgroundColor="@color/colorBackgroundFundo"
         app:cardCornerRadius="3dp"
         app:cardElevation="1dp"
         app:cardUseCompatPadding="true"
@@ -65,18 +65,20 @@
                     android:text="Nome do serviço"
                     android:textAlignment="center"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@color/colorTextoPrimary" />
+                    android:textColor="@color/colorPrimary"
+                    android:textStyle="bold" />
 
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorFundoServico">
+                    android:background="@color/colorBackgroundFundo">
+
                     <TextView
                         android:id="@+id/servicoId"
-                        android:visibility="invisible"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:visibility="invisible" />
 
                     <TextView
                         android:id="@+id/textDescricao"
@@ -92,7 +94,7 @@
                         android:padding="2dp"
                         android:text="Nome do cliente"
                         android:textAlignment="center"
-                        android:textColor="@color/colorTextoPrimary"
+                        android:textColor="@color/colorPrimary"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/textValor"
@@ -114,7 +116,7 @@
                         android:padding="2dp"
                         android:text="Valor"
                         android:textAlignment="center"
-                        android:textColor="@color/colorTextoPrimary"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -126,7 +128,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorFundoServico">
+                    android:background="@color/colorBackgroundFundo">
 
                     <TextView
                         android:id="@+id/textCliente"
@@ -138,9 +140,10 @@
                         android:padding="2dp"
                         android:text="Descrição do serviço"
                         android:textAlignment="center"
-                        android:textColor="@color/servicoDescricao" />
+                        android:textColor="@color/colorPrimary" />
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
