--- a/app/src/main/res/layout/activity_servicos.xml
+++ b/app/src/main/res/layout/activity_servicos.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:theme="@style/AppTheme">
     <android.support.design.widget.AppBarLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,15 +14,16 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
             app:titleTextColor="@color/colorTextoPrimary"
             app:layout_scrollFlags="scroll|enterAlways"
+            android:background="@color/colorPrimary"
             app:popupTheme="@style/AppTheme" />
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
             app:titleTextColor="@color/colorTextoPrimary"
             app:tabMode="fixed"
             app:tabGravity="fill"/>
@@ -31,13 +32,15 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimary"
+        android:theme="@style/AppTheme">
 
 
         <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="130dp"
+            android:theme="@style/AppTheme"
             android:background="@color/colorPrimary"
             app:cardCornerRadius="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
