--- a/app/src/main/res/layout/cards_layout.xml
+++ b/app/src/main/res/layout/cards_layout.xml
@@ -12,6 +12,7 @@
     android:layout_marginStart="0dp"
     android:layout_marginTop="0dp"
     android:background="@color/colorBackgroundFundo"
+    android:theme="@style/AppTheme"
     android:padding="0dp"
     android:paddingBottom="0dp"
     android:paddingEnd="0dp"
@@ -76,18 +77,30 @@
                 android:textAlignment="center"
                 android:textColor="@color/colorSecondary" />
 
-            <ImageButton
-                android:id="@+id/imageButtonAdicionarServico"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="2dp"
-                android:layout_marginEnd="0dp"
-                android:layout_marginLeft="0dp"
-                android:layout_marginRight="0dp"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="2dp"
-                android:background="@color/colorButtonFundoServico"
-                app:srcCompat="@drawable/baseline_add_circle_white_48" />
+                android:layout_gravity="center_vertical"
+                android:layout_margin="2dp"
+                android:background="@color/colorPrimaryDark"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/imageButtonAdicionarServico"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginRight="0dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="2dp"
+                    android:background="@color/colorButtonFundoServico"
+                    android:elevation="3dp"
+                    app:srcCompat="@drawable/baseline_add_circle_white_48" />
+
+            </LinearLayout>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
