--- a/app/src/main/res/layout/activity_servicos.xml
+++ b/app/src/main/res/layout/activity_servicos.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackgroundPrimary"
     android:theme="@style/AppTheme">
     <android.support.design.widget.AppBarLayout
     android:layout_width="match_parent"
@@ -32,28 +33,18 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorBackgroundPrimary"
         android:theme="@style/AppTheme">
 
 
-        <android.support.v7.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="130dp"
-            android:theme="@style/AppTheme"
-            android:background="@color/colorPrimary"
-            app:cardCornerRadius="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="8dp"
                 android:clipToPadding="true"
                 android:fillViewport="true"
+                android:layout_marginTop="130dp"
                 android:scrollbarStyle="outsideOverlay"
+                android:background="@color/colorBackgroundPrimary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -63,11 +54,12 @@
                     android:id="@+id/viewpager"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="@color/colorBackgroundPrimary"
                     android:layout_gravity="fill"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"
                     app:tabGravity="fill" />
             </ScrollView>
-        </android.support.v7.widget.CardView>
+
     </android.support.constraint.ConstraintLayout>
 
 
