--- a/app/src/main/res/layout/activity_servico_cadastro.xml
+++ b/app/src/main/res/layout/activity_servico_cadastro.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/AppTheme"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorBackgroundPrimary"
     tools:context=".ServicoCadastroActivity">
 
 
@@ -17,14 +17,10 @@
             android:theme="@style/AppTheme"
             android:background="@color/colorPrimary"
             app:titleTextColor="@color/colorTextoPrimary" />
-
-
-
     <android.support.v7.widget.CardView
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="70dp"
-        app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -40,61 +36,62 @@
             android:theme="@style/AppTheme"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="64dp"
-                android:layout_marginBottom="0dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
-                android:background="@color/colorBackgroundFundo"
-                android:paddingTop="10dp"
-                android:text="Serviço"
-                android:textAlignment="center"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:maxLength="50"
+            android:paddingTop="10dp"
+            android:text="Serviço"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/textViewNomeServico"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="0dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Nome do serviço"
-                android:textColor="@color/colorPrimaryDark"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textViewNomeServico"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Nome do serviço"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/editNomeDoServico"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="2dp"
+            android:ems="10"
+            android:inputType="text|textAutoCorrect|textPersonName"
+            android:maxLength="100"
+            android:singleLine="true"
+            android:textColor="@color/colorPrimaryDark"
+            tools:text="Digite o nome do serviço" />
+
+        <TextView
+            android:id="@+id/textDescricaoServico"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Descrição do serviço"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/editNomeDoServico"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="2dp"
-                android:ems="10"
-                android:inputType="text|textAutoCorrect|textPersonName"
-                android:singleLine="true"
-                android:textColor="@color/colorPrimaryDark"
-                tools:text="Digite o nome do serviço" />
-
-            <TextView
-                android:id="@+id/textDescricaoServico"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Descrição do serviço"
-                android:textColor="@color/colorPrimaryDark"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/editDescricaoServico"
+                android:id="@+id/editDescricaoDoServico"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -110,12 +107,15 @@
                 android:id="@+id/imageButtonServicoSalvar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="10dp"
                 android:adjustViewBounds="false"
-                android:background="@color/colorBackgroundFundo"
+                android:background="@color/colorButtonFundoServico"
                 android:elevation="0dp"
                 app:srcCompat="@drawable/baseline_save_black_48" />
 
 
-        </LinearLayout>
+    </LinearLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
