Consultar dados do banco para carregar na tela

--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -51,8 +51,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:maxLength="50"
-            android:inputType="textPersonName" />
+            android:inputType="textCapSentences|textAutoComplete|textPersonName"
+            android:maxLength="50" />
 
         <TextView
             android:id="@+id/textView8"
