--- a/app/src/main/res/layout/activity_servico_cadastro.xml
+++ b/app/src/main/res/layout/activity_servico_cadastro.xml
@@ -63,20 +63,20 @@
             android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/editNomeDoServico"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="2dp"
-            android:ems="10"
-            android:inputType="text|textAutoCorrect|textPersonName"
-            android:maxLength="100"
-            android:singleLine="true"
-            android:textColor="@color/colorPrimaryDark"
-            tools:text="Digite o nome do serviço" />
+            <EditText
+                android:id="@+id/editNomeDoServico"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="2dp"
+                android:ems="10"
+                android:inputType="text|textCapSentences|textAutoCorrect|textPersonName"
+                android:maxLength="100"
+                android:singleLine="true"
+                android:textColor="@color/colorPrimaryDark"
+                tools:text="Digite o nome do serviço" />
 
         <TextView
             android:id="@+id/textDescricaoServico"
@@ -99,7 +99,7 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginTop="2dp"
                 android:ems="10"
-                android:inputType="textMultiLine"
+                android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
                 android:textColor="@color/colorPrimaryDark"
                 tools:text="Digite a descrição para o serviço" />
 
