--- a/app/src/main/res/layout/cards_layout.xml
+++ b/app/src/main/res/layout/cards_layout.xml
@@ -58,7 +58,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/colorTituloPrimary"
                 android:textStyle="bold"
-                android:visibility="visible" />
+                android:visibility="invisible" />
             <TextView
                 android:id="@+id/textServicoName"
                 android:layout_width="match_parent"
