Cadastro de prestador e servicos realizados

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackgroundPrimary"
+    android:id="@+id/activity_main_inicio"
     android:theme="@style/AppTheme">
 
     <com.google.android.gms.common.SignInButton
