Cadastro prestador, carregar os dados de prestador, ajuste no layout

--- a/app/src/main/res/layout/activity_item_servico.xml
+++ b/app/src/main/res/layout/activity_item_servico.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackgroundPrimary"
+    android:id="@+id/activity_item_servico_cadastro"
     tools:context=".ItemServicoActivity">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarItemServico"
