--- a/app/src/main/res/layout/activity_servicos.xml
+++ b/app/src/main/res/layout/activity_servicos.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackgroundPrimary"
+    android:configChanges="orientation|keyboardHidden|screenSize"
     android:theme="@style/AppTheme">
     <android.support.design.widget.AppBarLayout
     android:layout_width="match_parent"
